--- a/LensesReminder/Main.storyboard
+++ b/LensesReminder/Main.storyboard
@@ -20,7 +20,7 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OPd-md-BhQ">
                                 <rect key="frame" x="16" y="64" width="119" height="30"/>
-                                <state key="normal" title="Uzupelnij receptę">
+                                <state key="normal" title="Uzupełnij receptę">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -34,6 +34,24 @@
                                 </state>
                                 <connections>
                                     <segue destination="4pM-nu-ehk" kind="show" id="VmD-NN-D1P"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fvs-AQ-MVY">
+                                <rect key="frame" x="184" y="102" width="99" height="30"/>
+                                <state key="normal" title="Edytuj receptę">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="CLX-CI-3wc" kind="show" id="NTs-yA-dVt"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YYD-nM-9Uj">
+                                <rect key="frame" x="16" y="140" width="116" height="30"/>
+                                <state key="normal" title="Zakup soczewek">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="2ZJ-Et-XC2" kind="show" id="G0K-op-WfF"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="plH-LD-7uB">
@@ -50,24 +68,42 @@
                                     <segue destination="4pM-nu-ehk" kind="show" id="hpC-Vf-ftX"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fvs-AQ-MVY">
-                                <rect key="frame" x="184" y="102" width="99" height="30"/>
-                                <state key="normal" title="Edytuj receptę">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="CLX-CI-3wc" kind="show" id="NTs-yA-dVt"/>
-                                </connections>
-                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ukv-gh-xIG">
+                                <rect key="frame" x="16" y="178" width="568" height="79"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="79" id="1zC-bM-UZ6"/>
+                                    <constraint firstAttribute="width" constant="568" id="5v1-yl-3sx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MRx-Sc-fFP">
+                                <rect key="frame" x="16" y="265" width="568" height="88"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="88" id="kkf-CT-uec"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="yrN-o8-qTc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="10J-bb-y5c"/>
+                            <constraint firstItem="Ukv-gh-xIG" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="5XM-19-OT4"/>
                             <constraint firstItem="OPd-md-BhQ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="8E5-m5-vqd"/>
+                            <constraint firstItem="MRx-Sc-fFP" firstAttribute="top" secondItem="Ukv-gh-xIG" secondAttribute="bottom" constant="8" id="Gwg-WQ-kRs"/>
+                            <constraint firstItem="Ukv-gh-xIG" firstAttribute="top" secondItem="YYD-nM-9Uj" secondAttribute="bottom" constant="8" id="KmS-AR-C3R"/>
                             <constraint firstItem="Fvs-AQ-MVY" firstAttribute="leading" secondItem="yrN-o8-qTc" secondAttribute="trailing" constant="69" id="VuB-w1-R20"/>
+                            <constraint firstItem="YYD-nM-9Uj" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="ZWN-it-tSJ"/>
+                            <constraint firstItem="MRx-Sc-fFP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="dbt-3Y-Qp4"/>
                             <constraint firstItem="plH-LD-7uB" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="hcM-wf-a31"/>
+                            <constraint firstItem="YYD-nM-9Uj" firstAttribute="top" secondItem="yrN-o8-qTc" secondAttribute="bottom" constant="8" id="kQa-Xu-xYe"/>
+                            <constraint firstItem="Ukv-gh-xIG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="kTe-fl-tUt"/>
                             <constraint firstItem="Fvs-AQ-MVY" firstAttribute="top" secondItem="plH-LD-7uB" secondAttribute="bottom" constant="8" id="mff-nY-8e4"/>
                             <constraint firstItem="plH-LD-7uB" firstAttribute="leading" secondItem="OPd-md-BhQ" secondAttribute="trailing" constant="49" id="taQ-Vj-jqf"/>
+                            <constraint firstItem="MRx-Sc-fFP" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="wsp-21-Nt7"/>
                             <constraint firstItem="yrN-o8-qTc" firstAttribute="top" secondItem="OPd-md-BhQ" secondAttribute="bottom" constant="8" id="zdB-7R-aKc"/>
                             <constraint firstItem="OPd-md-BhQ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="zk2-bA-3ri"/>
                         </constraints>
@@ -75,10 +111,100 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="YMa-0r-S5M"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="expireInfoLabel" destination="MRx-Sc-fFP" id="gVx-2x-A4r"/>
+                        <outlet property="fillRecipeButton" destination="OPd-md-BhQ" id="nln-IV-2nO"/>
+                        <outlet property="infoLabel" destination="Ukv-gh-xIG" id="Ppv-Fw-3JC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1192" y="317"/>
+        </scene>
+        <!--Data Picker View-->
+        <scene sceneID="IyW-Ja-NPX">
+            <objects>
+                <viewController id="2ZJ-Et-XC2" customClass="DataPickerView" customModule="LensesReminder" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cr5-tk-Cfc"/>
+                        <viewControllerLayoutGuide type="bottom" id="exY-2M-Maf"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="iJo-bn-6Qy">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="d3D-ps-S7a">
+                                <rect key="frame" x="16" y="91" width="568" height="162"/>
+                                <date key="date" timeIntervalSinceReferenceDate="459696498.84966701">
+                                    <!--2015-07-27 13:28:18 +0000-->
+                                </date>
+                                <connections>
+                                    <action selector="datePickerAction:" destination="2ZJ-Et-XC2" eventType="valueChanged" id="imc-RO-BCp"/>
+                                </connections>
+                            </datePicker>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZpQ-m1-VH8">
+                                <rect key="frame" x="16" y="274" width="568" height="58"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="58" id="Ry1-0p-Ar5"/>
+                                    <constraint firstAttribute="width" constant="568" id="wU2-yb-mqN"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bY8-f1-Bte">
+                                <rect key="frame" x="16" y="518" width="568" height="30"/>
+                                <state key="normal" title="Zapisz">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="zapiszButtonTapped:" destination="2ZJ-Et-XC2" eventType="touchUpInside" id="5et-oK-1Zd"/>
+                                </connections>
+                            </button>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="BVW-yk-evW">
+                                <rect key="frame" x="253" y="481" width="94" height="29"/>
+                                <connections>
+                                    <action selector="stepperValueChange:" destination="2ZJ-Et-XC2" eventType="valueChanged" id="LPQ-F9-sEY"/>
+                                </connections>
+                            </stepper>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SGK-1i-AID">
+                                <rect key="frame" x="235" y="461" width="130" height="17"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="130" id="9yj-d3-dV8"/>
+                                    <constraint firstAttribute="height" constant="17" id="gLW-MV-dkO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ZpQ-m1-VH8" firstAttribute="trailing" secondItem="iJo-bn-6Qy" secondAttribute="trailingMargin" id="0mY-Wq-Gx2"/>
+                            <constraint firstItem="bY8-f1-Bte" firstAttribute="leading" secondItem="iJo-bn-6Qy" secondAttribute="leadingMargin" id="1vk-9S-pGt"/>
+                            <constraint firstItem="ZpQ-m1-VH8" firstAttribute="leading" secondItem="iJo-bn-6Qy" secondAttribute="leadingMargin" id="Bcc-sO-mm2"/>
+                            <constraint firstItem="d3D-ps-S7a" firstAttribute="trailing" secondItem="iJo-bn-6Qy" secondAttribute="trailingMargin" id="J2S-Di-NVq"/>
+                            <constraint firstItem="ZpQ-m1-VH8" firstAttribute="top" secondItem="d3D-ps-S7a" secondAttribute="bottom" constant="21" id="NZS-Ml-gPw"/>
+                            <constraint firstItem="BVW-yk-evW" firstAttribute="top" secondItem="SGK-1i-AID" secondAttribute="bottom" id="XfS-Tf-1if"/>
+                            <constraint firstItem="bY8-f1-Bte" firstAttribute="trailing" secondItem="iJo-bn-6Qy" secondAttribute="trailingMargin" id="bHf-gI-WBt"/>
+                            <constraint firstItem="d3D-ps-S7a" firstAttribute="top" secondItem="cr5-tk-Cfc" secondAttribute="bottom" constant="27" id="eyu-AH-RhR"/>
+                            <constraint firstItem="bY8-f1-Bte" firstAttribute="top" secondItem="BVW-yk-evW" secondAttribute="bottom" constant="8" id="fFQ-aO-eVD"/>
+                            <constraint firstItem="exY-2M-Maf" firstAttribute="top" secondItem="bY8-f1-Bte" secondAttribute="bottom" constant="8" id="sam-A4-pcA"/>
+                            <constraint firstAttribute="centerX" secondItem="SGK-1i-AID" secondAttribute="centerX" id="sl7-dc-Gi4"/>
+                            <constraint firstItem="d3D-ps-S7a" firstAttribute="leading" secondItem="iJo-bn-6Qy" secondAttribute="leadingMargin" id="txz-nk-Jrp"/>
+                            <constraint firstAttribute="centerX" secondItem="BVW-yk-evW" secondAttribute="centerX" id="wdz-lN-mgu"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="myDatePicker" destination="d3D-ps-S7a" id="ZnL-mo-hSP"/>
+                        <outlet property="selectedDate" destination="ZpQ-m1-VH8" id="OSo-O9-lBG"/>
+                        <outlet property="stepper" destination="BVW-yk-evW" id="WTh-6w-tlU"/>
+                        <outlet property="stepperInfoLabel" destination="SGK-1i-AID" id="v7V-81-epc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="H8T-HP-FDp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1192" y="1011"/>
         </scene>
         <!--Edit Recipe View-->
         <scene sceneID="c5e-Zd-cBt">
